--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-otp-input": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.3.0",
     "sass": "^1.38.0",
     "web-vitals": "^1.1.2"
   },
