--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/job_portal
 spring.datasource.username=root
 spring.datasource.password=password1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
