--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-#spring.datasource.url=jdbc:mysql://localhost:3305/job_portal
-#spring.datasource.username=manipal
-#spring.datasource.password=manI@1747
-spring.datasource.url=jdbc:mysql://localhost:3306/job_portal
-spring.datasource.username=root
-spring.datasource.password=password1234
+spring.datasource.url=jdbc:mysql://localhost:3305/job_portal
+spring.datasource.username=manipal
+spring.datasource.password=manI@1747
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
